--- a/src/style.css
+++ b/src/style.css
@@ -1,80 +1,79 @@
 body {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	color: rgb(255,255,255);
-	vertical-align: baseline;
-	background-color:#8C8C8C;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    color: #fff;
+    vertical-align: baseline;
+    background-color: #8C8C8C;
 }
 
 h2 {
-	background-color: rgb(255,255,255);
-	padding: 0.5em 0.1em 0.5em 0.1em;
-	margin-top:6em;
-	text-transform:uppercase;
-	font-size:0.8em;
-	text-align:center;
-	color: rgb(140,140,140);
+    background-color: #fff;
+    padding: 0.5em 0.1em;
+    margin-top: 6em;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    text-align: center;
+    color: #8C8C8C;
 }
 
 #main {
-	width:40%;
-	margin:auto;
-	padding:2em 5em 2em 5em;
-	background: rgb(140,140,140);
-	background: linear-gradient(90deg, rgba(140,140,140,0.4) 0%, rgba(153,153,153,0.6) 5%, rgba(153,153,153,0.6) 95%, rgba(140,140,140,0.4) 100%);
+    width: 40%;
+    margin: auto;
+    padding: 2em 5em;
+    background: linear-gradient(90deg, rgba(140, 140, 140, 0.4) 0%, rgba(153, 153, 153, 0.6) 5%, rgba(153, 153, 153, 0.6) 95%, rgba(140, 140, 140, 0.4) 100%);
+}
+
+#title,
+#subtitle {
+    text-align: center;
 }
 
 #title {
-	text-transform:uppercase;
-	font-size:1.5em;
-	text-align:center;
+    text-transform: uppercase;
+    font-size: 1.5em;
 }
 
 #subtitle {
-	text-transform:none;
-	font-size:1.2em;
-	text-align:center;
-	margin-bottom:1em;
+    font-size: 1.2em;
+    margin-bottom: 1em;
 }
 
 #img-div {
 }
 
 #image {
-  max-width: 100%;
-  display: block;
-  height: auto;
-  margin: 0 auto;
-	border: 0.1em solid rgb(255,255,255);
-	border-radius: 50%;
-	opacity:0.6;
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+    border: 0.1em solid #fff;
+    border-radius: 50%;
+    opacity: 0.6;
 }
 
 #image:hover {
-	opacity:0.8;
-	display:block;
+    opacity: 0.8;
 }
 
 #img-caption {
-	text-transform:none;
-	font-size:0.8em;
-	text-align:center;
-	margin-top:1em;
+    font-size: 0.8em;
+    text-align: center;
+    margin-top: 1em;
 }
 
 #tribute-info {
-	text-align:justify;
-	padding: 0.5em 0.5em 0.5em 0.5em;
+    text-align: justify;
+    padding: 0.5em;
 }
 
 #tribute-link {
-	text-decoration:none;
-	color: rgb(140,140,194);
+    text-decoration: none;
+    color: #8C8C8C;
 }
 
 #tribute-link:hover {
-	text-decoration:underline;
+    text-decoration: underline;
 }
